# fidget-koto

./: .koto-api-docs  Cargo.toml  LICENSE  README.md
crates/fidget-koto/: Cargo.toml
crates/fidget-koto/docs/: builtin.md
crates/fidget-koto/koto-api-docs/: DEFAULT-IMPORTS  IGNORE  PRELUDE.md  fidget.md
crates/fidget-koto/src/: core.koto  engine.rs  fidget_lib.rs  ktree.rs  lib.rs  macros.rs  shapes.rs  tree_object.rs  utils.rs
crates/fidget-koto/src/shapes/: circle.rs  csg.rs  mod.rs  primitives.rs  sphere.rs  transforms.rs  union.rs
crates/fidget-koto/src/shapes/primitives/: circle.rs  mod.rs  sphere.rs
demos/viewer/: Cargo.toml
demos/viewer/src/: main.rs  script.rs
models/: cabin.koto  circles.koto  colors.koto  csg.koto  foo.koto  foo1.koto  foo2.koto  foo3.koto  gyroid-sphere.koto  main.koto  simple.koto  simple_main.koto  simple_module.koto  spheres.koto  spheres_smooth_union.koto  sponge.koto  test.koto
models/src/: engine.rs  lib.rs  macros.rs  tree_object.rs
